namespace ProjectH.Constants
{
    public static class Constants
    {
        public static class PieceAnimations
        {
            public const string PlaceTrigger = "Placed";
            public const string CantMoveTrigger = "CantMove";
            public const string CantMoveState = "CantMoveState";
            public const int CantMoveUp = 0;
            public const int CantMoveRight = 1;
            public const int CantMoveDown = 2;
            public const int CantMoveLeft = 3;
        }
    }
}
